--- a/index.html
+++ b/index.html
@@ -6,90 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Data Types</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            height: 100vh;
-            padding: 5%;
-            background-color: rgb(226, 246, 234);
-        }
-
-        header {
-            margin: 0 auto 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <h1>Net Income Calculator</h1>
     </header>
 
-    <div class="m-auto d-flex flex-column flex-sm-row py-3 px-5 bg-success">
-        <form class="w-100">
-            <input id="gross" class="w-100 p-1" type="number" required>
-        </form>
-        <button id="compute" class="p-1 my-2 my-sm-0 m-sm-3">Compute</button>
-    </div>
+    <section class="mb-5">
+        <h4 class="mb-3">Input Gross Income</h4>
+        <div class="d-flex flex-column flex-sm-row p-5 bg-success">
+            <form class="w-100">
+                <input id="gross" class="w-100 py-1 px-2" type="number" placeholder=" Enter Gross Income" required>
+            </form>
+            <button id="compute" class="my-2 my-sm-0 m-sm-3">Compute</button>
+        </div>
+    </section>
 
-    <div class="my-5 py-3 px-5 bg-success text-white">
-        <p>Results</p>
-        <p id="tax"></p>
-        <p id="tax_rate"></p>
-        <p id="annual"></p>
-        <p id="monthly"></p>
-    </div>
-    <div>
-        <table class="table table-responsive table-striped">
-            <thead>
+    <section class="mb-5">
+        <h4 class="mb-3">Results</h4>
+        <div class="p-5 bg-success text-white">
+            <p id="initial"></p>
+            <p id="tax_rate"></p>
+            <p id="tax"></p>
+            <p id="deductions"></p>
+            <p id="annual"></p>
+            <p id="monthly"></p>
+        </div>
+    </section>
+
+    <table class="table text-white table-responsive">
+        <caption class="caption-top text-white mb-3">2023 Income Tax Rate</caption>
+        <thead>
                 <tr>
                     <th>Lower Bracket</th>
                     <th>Upper Bracket</th>
+                    <th>Base Tax</th>
                     <th>Tax Rate</th>
                 </tr>
-            </thead>
-            <tbody>
+        </thead>
+        <tbody>
                 <tr>
-                    <td>0</td>
+                    <td>1</td>
                     <td>250,000</td>
+                    <td>0</td>
                     <td>0%</td>
                 </tr>
                 <tr>
                     <td>250,001</td>
                     <td>400,000</td>
+                    <td>0</td>
                     <td>15%</td>
                 </tr>
                 <tr>
                     <td>400,001</td>
                     <td>800,000</td>
+                    <td>22,500</td>
                     <td>20%</td>
                 </tr>
                 <tr>
                     <td>800,001</td>
                     <td>2,000,000</td>
+                    <td>102, 500</td>
                     <td>25%</td>
                 </tr>
                 <tr>
                     <td>2,000,001</td>
                     <td>8,000,000</td>
+                    <td>402, 500</td>
                     <td>30%</td>
                 </tr>
                 <tr>
                     <td>8,000,001</td>
                     <td>and over</td>
+                    <td>2,202,500</td>
                     <td>30%</td>
                 </tr>
+        </tbody>
+    </table>
 
-            </tbody>
-        </table>
-    </div>
-
-<script src="Compute.js"></script>
-<script src="Calculate.js"></script>
+<script src="scripts/Calculate.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
