--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Net Income Calculator</h1>
+        <h1>Income Tax Calculator</h1>
     </header>
 
     <section class="mb-5">
